--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 
     <!-- Main Content -->
     <div class="container">
-      <div class="row hp-post" data-toggle="tooltip" data-placement="top" title="Click anywhere to hide this post">
+      <div class="row hp-post">
+        <a class="exit" title="close me" data-toggle="tooltip" data-placement="top"></a>
           <div class="col-md-2 col-md-offset-1">
             <div id="author"><p>Author: Hiker Paradise</p></div>
             <div id="location"><p>Location: Paradise</p></div>
           </div>
           <div class="col-md-6 post">
-            <div id="post-title"><h1><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Welcome to Hiker Paradise</h1></div>
+            <div id="post-title"><h1>Welcome to Hiker Paradise</h1></div>
             <div id="post-content"><p>Welcome, glad you found us. On this page, you'll find great content geared towards the hiking enthusiasts. Content ranging from trails, gear, training techniques, food, snacks and knowledge from people from around the globe.</p></div>
           </div>
         </div>
