--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <!-- Main Content -->
     <div class="container">
       <div class="row hp-post">
-        <a class="exit" title="close me" data-toggle="tooltip" data-placement="top"></a>
+        <a class="exit" title="Close Me" data-toggle="tooltip" data-placement="top"></a>
           <div class="col-md-2 col-md-offset-1">
             <div id="author"><p>Author: Hiker Paradise</p></div>
             <div id="location"><p>Location: Paradise</p></div>
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-md-2 col-md-offset-5">
           <div class="text-center">
-            <h4 id="post-count">Post Count: 1</h4>
+            <h4 id="post-count">Post Count: 0</h4>
           </div>
         </div>
       </div>
@@ -107,22 +107,42 @@
   <!-- custom script -->
   <script type="text/javascript" src="script.js"></script>
 
-  <!-- underscore template -->
-  
-
   <!-- Underscore template -->
  
     <script type="text/template" id="post-template">
       <!-- Start User Post -->
       <div id="post-underscore-template">
-        <div class="row new-post">
+        <div class="row new-post post" id="post-<%= id %>" data-id="<%= id %>">
           <div class="col-md-2 col-md-offset-1 sidebar">
             <div id="author"><p>Author: <%= author %></p></div>
             <div id="location"><p>Location: <%= location %></p></div>
           </div>
-          <div class="col-md-6 post">
+          <div class="col-md-6 post-area">
             <div id="post-title"><h1><%= postTitle %></h1></div>
             <div id="post-content"><p><%= userPost %></p></div>
+
+            <!-- delete button -->
+            <button class="close right-side delete-post" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+
+            <!-- edit glyphicon to toggle form -->
+            <a data-toggle="collapse" data-target="#update-<%= id %>">
+              <span class="glyphicon glyphicon-edit edit"></span>
+            </a>
+
+            <!-- form to update post -->
+            <div class="collapse" id="update-<%= id %>">
+              <br>
+              <form class="form-group update-post">
+                <input type="text" class="form-control updated-author" value="<%= author %>">
+                <input type="text" class="form-control updated-location" value="<%= location %>">
+                <input type="text" class="form-control updated-post-title" value="<%= postTitle %>">
+                <input type="text" class="form-control updated-user-post" value="<%= userPost %>">
+                <input type="submit" class="btn btn-default" value="Update phrase">
+              </form>
+            </div>
+            
           </div>
         </div>
       </div>
