fixed autofus on page refresh

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                 <input type="text" class="form-control updated-post-title" value="<%= postTitle %>"><br>
                 <input type="text" class="form-control updated-user-post" value="<%= userPost %>"><br>
                 <input type="submit" class="btn btn-custom" value="Update Post">
-                <input type="button" class="btn btn-danger delete-post" value="Delete">
+                <input type="button" class="btn btn-danger-custom delete-post" value="Delete">
                 <!-- delete button -->
               </form>
             </div>
