Added test.js and code to test elements.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <div id="location"><p>Location: Paradise</p></div>
           </div>
           <div class="col-md-6 post">
-            <div id="post-title"><h1>Welcome to Hiker Paradise</h1></div>
+            <div id="post-title"><h1 class="welcome-h1">Welcome to Hiker Paradise</h1></div>
             <div id="post-content"><p>Welcome, glad you found us. On this page, you'll find great content geared towards the hiking enthusiasts. Content ranging from trails, gear, training techniques, food, snacks and knowledge from people from around the globe.</p></div>
           </div>
         </div>
