--- a/public/index.html
+++ b/public/index.html
@@ -134,9 +134,9 @@
                 <input type="text" class="form-control updated-location" value="<%= location %>"><br>
                 <input type="text" class="form-control updated-post-title" value="<%= postTitle %>"><br>
                 <input type="text" class="form-control updated-user-post" value="<%= userPost %>"><br>
+                <!-- Edit and Delete buttons -->
                 <input type="submit" class="btn btn-custom" value="Update Post">
                 <input type="button" class="btn btn-danger-custom delete-post" value="Delete">
-                <!-- delete button -->
               </form>
             </div>
             
